--- a/src/app/components/output/plotly/plotly.component.css
+++ b/src/app/components/output/plotly/plotly.component.css
@@ -16,8 +16,12 @@
 
 .toggle-button {
     position: absolute;
-top: 50%;
-right: 0;
--webkit-transform: translateY(-50%);
-transform: translateY(-50%);
+    top: 50%;
+    right: 0;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    background-color: var(--main-transparent);
+}
+.toggle-button:hover {
+    background-color: var(--main-hover);
 }
