--- a/src/app/components/output/plotly/plotly.component.html
+++ b/src/app/components/output/plotly/plotly.component.html
@@ -1,4 +1,4 @@
-<div #plot style="width: 100%; height: 100%;"></div>
+<div id="plot" #plot style="width: 100%; height: 100%;"></div>
 <mat-icon matTooltip="Show/Hide legend." matTooltipPosition="before" class="toggle-button"
     (click)="toggleLegend($event)">
     {{showLegend ? "chevron_right" : "chevron_left"}}
