for boundary segments, select boundary by default in source origin type dropdown

--- a/src/app/components/input/comid-select-input/comid-select-input.component.html
+++ b/src/app/components/input/comid-select-input/comid-select-input.component.html
@@ -121,7 +121,7 @@
             <select formControlName="sourceOrigin">
                 <option *ngIf="isBoundary">Boundary</option>
                 <option>Point Source</option>
-                <option>Overland Flow</option>
+                <option>Non-Point Source</option>
             </select>
         </div>
         <div class="form-row">
