--- a/src/app/components/output/table/table.component.css
+++ b/src/app/components/output/table/table.component.css
@@ -1,6 +1,6 @@
 .container {
    display: grid;
-   grid-template-rows: auto 1fr auto;
+   grid-template-rows: 30px 1fr auto;
     position: absolute;
     top: 0px; bottom: 0; left: 0; right: 0;
     z-index: 0;
