--- a/src/app/components/output/table/table.component.html
+++ b/src/app/components/output/table/table.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <div></div>
   <div class="table-container">
     <table mat-table [dataSource]="dataSource" style="height: 100%; width: 100%;" matSort>
       <ng-container *ngFor="let col of columnNames" [matColumnDef]="col">
