--- a/src/app/components/output/execution-panel/execution-panel.component.html
+++ b/src/app/components/output/execution-panel/execution-panel.component.html
@@ -9,7 +9,12 @@
     <app-segment-status-list></app-segment-status-list>
     <div *ngIf="simComplete && simStatus !== 'FAILED'">
         <div class="button ready" (click)="gotoOutput()">Examine Output</div>
-        <div class="button ready" (click)="downloadSimResults()">Download Data</div>
+        <div class="button ready" (click)="downloadSimResults()" [class.disabled]="simComplete && simStatus == 'COMPLETED'">Download Data</div>
+        
+        <div *ngIf="downloading" class="centered">Downloading results .zip file</div>
+        <div class="button" *ngIf="waiting">
+            <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+        </div>
     </div>
     <div class="button" *ngIf="!simComplete" (click)="cancelExecution()">Cancel Simulation Execution</div>
 </div>
