--- a/src/app/components/output/execution-panel/execution-panel.component.html
+++ b/src/app/components/output/execution-panel/execution-panel.component.html
@@ -11,7 +11,7 @@
         <div class="button ready" (click)="gotoOutput()">Examine Output</div>
         <div class="button ready" (click)="downloadSimResults()" [class.disabled]="simComplete && simStatus == 'COMPLETED'">Download Data</div>
         
-        <div *ngIf="downloading" class="centered">Downloading results .zip file</div>
+        <div *ngIf="downloading" class="centered">Downloading simulation results as .zip file</div>
         <div class="button" *ngIf="waiting">
             <mat-progress-bar mode="indeterminate"></mat-progress-bar>
         </div>
