--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,7 @@ html {
 }
 
 body { 
+    all: revert;
     margin: 0px;
     height: 100vh;
     font-family: Roboto, "Helvetica Neue", sans-serif;
