added about component for output

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="input ? 'container-input-page' : 'container-output-page'" id="about">
+<div class="container-input-page" id="about">
     <h2>What is HMS?</h2>
     Hydrologic Micro Services, HMS, is a hydrologic and water quality modeling system comprised of data provisioning and
     modeling components and workflows to facilitate environmental modeling.
