--- a/src/app/components/output/output.component.html
+++ b/src/app/components/output/output.component.html
@@ -10,7 +10,7 @@
                 matTooltipPosition="after">add_box</mat-icon>
         </div>
     </div>
-    <app-about [input]="false" *ngIf="showAbout" (closeMe)="closeAbout()"></app-about>
+    <app-about-output *ngIf="showAbout" (closeMe)="closeAbout()"></app-about-output>
     <div [ngClass]="showAbout ? 'hide' : 'dashboard-container'">
         <div [ngClass]="showPanel ? 'left-panel' : 'hide'">
             <div class="left-panel-container">
