update about panel, remove help button

--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -1,5 +1,5 @@
 <div class="input-container">
-    <strong class="centered">Aquatox WebWorkflow Alpha v0.1.0</strong>
+    <strong class="centered">Aquatox Workflow Alpha v0.1.0</strong>
     <div *ngIf="!simExecuting && !simCompleted">
         <div class="scroll-pane">
             <!-- AOI section -->
