--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,17 +1,21 @@
 .container-input-page {
-    position: absolute;
+    /* position: absolute; */
     z-index: 999;
     inset: 0;
-    min-width: 500px;
-    max-height: var(--main-max-panel-height);
+    width: 500px;
+    height: var(--main-max-panel-height);
     padding-left: 1rem;
     padding-right: 1rem;
+    padding-bottom: 1rem;
     overflow-y: scroll;
-    height: 812px;
     background-color: var(--main-color);
 }
 
 .container > h2 {
     margin: 0;
     padding-top: .5rem;
+}
+
+table, td {
+    border: 1px solid var(--main-border);
 }
