--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,8 @@
     --main-ready: rgb(0, 190, 19);
     --main-fail: rgb(255, 0, 0);
 
+    --main-border: rgb(150, 150, 150);
+
     --row-gap: .19rem;
     --column-gap: .125rem;
 
@@ -114,7 +116,7 @@ mat-icon:hover {
 .container-item {
     padding: .25rem;
     background-color: var(--main-color);
-    border: 1px solid rgb(150, 150, 150);
+    border: 1px solid var(--main-border);
 }
 
 .section-item {
