closed left panel button styling

--- a/src/app/components/ui/expansion-panel-left/expansion-panel-left.component.css
+++ b/src/app/components/ui/expansion-panel-left/expansion-panel-left.component.css
@@ -5,9 +5,14 @@
     background-color: var(--main-background);
 }
 
-.panel-left-open {
+.panel-left-open,
+.panel-left-closed {
     display: grid;
     grid-template-columns: 1fr auto;
+}
+
+.panel-left-closed {
+    width: 200px;
 }
 
 .collapse-icon-left {
