--- a/src/app/components/ui/expansion-panel-left/expansion-panel-left.component.html
+++ b/src/app/components/ui/expansion-panel-left/expansion-panel-left.component.html
@@ -13,7 +13,7 @@
         <app-input></app-input>
     </div>
     <div *ngIf="!open && !showAbout">
-        <div class="panel-left-open">
+        <div class="panel-left-closed">
             <div class="form-row">
                 <div class="segment-status" (click)="backToHMS()">Back to HMS</div>
                 <div class="segment-status" (click)="aboutAQT()">About</div>
