enforce no duplicate loading type for segment. add loading removal functionality

--- a/src/app/components/input/comid-select-input/comid-select-input.component.css
+++ b/src/app/components/input/comid-select-input/comid-select-input.component.css
@@ -11,3 +11,8 @@ table {
     background-color: lightgray;
     color: gray;
 }
+
+.loading-button {
+    display: grid;
+    grid-template-columns: 15fr 1fr;
+}
