--- a/src/app/components/input/comid-select-input/comid-select-input.component.html
+++ b/src/app/components/input/comid-select-input/comid-select-input.component.html
@@ -141,7 +141,7 @@
         <div class="section-item" *ngIf="loadingRate == 'Constant'">
             <div class="form-row">
                 <div><label>Constant Loading Value</label></div>
-                <input formControlName="constLoadingValue" type="number" class="input-number">
+                <div><input formControlName="constLoadingValue" type="number" class="input-number"></div>
             </div>
             <div class="form-row">
                 <div><label>Loading Multiplier</label></div>
