--- a/src/app/components/map/map-control/map-control.component.html
+++ b/src/app/components/map/map-control/map-control.component.html
@@ -16,7 +16,7 @@
         <div class="container-item" *ngIf="simFeatures.length" >
             <div class="form-row">
                 <div class="vertical-center">Study Area</div>
-                <div class="button" (click)="centerOnAOI()">Center Map</div>
+                <div class="segment-status" (click)="centerOnAOI()">Center Map</div>
             </div>
             <app-layer-control *ngFor="let feature of simFeatures" [feature]="feature"></app-layer-control>
         </div>
