--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -94,8 +94,8 @@
                             <div class="form-row">
                                 <div class="vertical-center">Simulation Output</div>
                                 <div class="form-row">
-                                    <div>Hour <input type="radio" name="tStep" formControlName="tStep" value="hour"></div>
-                                    <div>Day <input type="radio" name="tStep" formControlName="tStep" value="day"></div>
+                                    <div>Hourly <input type="radio" name="tStep" formControlName="tStep" value="hour"></div>
+                                    <div>Daily <input type="radio" name="tStep" formControlName="tStep" value="day"></div>
                                 </div>
                             </div>
                             <div class="form-row">
