--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,6 +1,6 @@
 
 <div>
-    <div class="button" (click)="close()">Back to Aquatox Workflow</div>
+    <div class="button" (click)="close()">Go to Aquatox Workflow</div>
 <div class="container-input-page" id="about">
     <h3>Overview</h3>
     <p>AQUATOX workflow is a web application to simulate fate and transport of nutrients and organic matter in user selected NHD stream network 
