update field names and about table 1

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -87,13 +87,13 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>First Day</td>
+                    <td>Start Date (UTC)</td>
                     <td>Simulation starting date</td>
                     <td>Must be within data availability range of NWM at <a href="https://docs.opendata.aws/nwm-archive/readme.html">https://docs.opendata.aws/nwm-archive/readme.html</a>. 
                         Currently, data are available from 1993 through 2017. Date format is mm/dd/yyyy.</td>
                 </tr>
                 <tr>
-                    <td>Last Day</td>
+                    <td>End Date (UTC)</td>
                     <td>Simulation last date</td>
                     <td>Must be within data availability range of NWM at <a href="https://docs.opendata.aws/nwm-archive/readme.html">https://docs.opendata.aws/nwm-archive/readme.html</a>. 
                         Currently, data are available from 1993 through 2017.  Last day must be later than the first day. Date format is mm/dd/yyyy.</td>
