--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -83,11 +83,11 @@
                         <div class="section-item">
                             <div class="form-row">
                                 <div>
-                                    First Day
+                                    Start Date (UTC)
                                     <input type="date" formControlName="firstDay">
                                 </div>
                                 <div>
-                                    Last Day
+                                    End Date (UTC)
                                     <input type="date" formControlName="lastDay">
                                 </div>
                             </div>
